Fri Jul  4 14:15:24 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/apcsmart.c: print the firmware identifier for older Smart-UPS
   models, if it is successfully retrieved. (driver v1.99.9)

Fri Jul  4 12:04:55 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - clients/upsclient.c: fix a compilation error due to the missing include
   of timehead.h (reported by Thomas Jarosch)

Thu Jul  3 12:49:01 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - data/driver: add Cyber Power Systems Value range (400E, 600E and 800E)
   (reported by Thomas Backman)
   
Tue Jul  1 12:33:43 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - man/al175.8: fix a manpage error
   (reported by Debian Lintian QA tool)

Tue Jul  1 12:33:43 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - man/Makefile.am: also distribute libupsclient-config.1
   (reported by Lab10)

Mon Jun 30 07:54:36 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/main.c: only call upsdrv_cleanup() if upsdrv_initups() was
   successful (to prevent cleaning up non-existant drivers)

Sat Jun 28 19:41:23 UTC 2008 / Carlos Rodrigues <cefrodrigues@gmail.com>

 * drivers/megatec.c:
   - Add parameters to set DTR and RTS explicitly in case the default values
     don't work.
   - Allow the UPS load value to be undefined.
   - Send an "I" command before detection because some models seem to
     require it.
   - Do nothing in upsdrv_cleanup if the file descriptor is invalid (to shut
     up a warning displayed when running "megatec -h").

Sat Jun 28 14:25:42 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - configure.in, scripts/hal/Makefile.am: generate ups-nut-device.fdi based on
   Arjen's autoconf test.

Fri Jun 27 20:27:35 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - scripts/hal/ups-nut-device.fdi: since HAL 0.5.11, "info.bus" is no longer
   used and is replaced by "info.subsystem"

Sun Jun 22 18:09:03 UTC 2008 / Charles Lepple <clepple@gmail.com>
