@@ -778,6 +778,7 @@ AC_SUBST(HAL_USER)
 AC_SUBST(HAL_DEVICE_MATCH_KEY)
 AC_SUBST(HAL_FDI_PATH)
 AC_SUBST(HAL_CALLOUTS_PATH)
+AC_SUBST(HAVE_GLIB_2_14)
 AC_SUBST(LIBHAL_CFLAGS)
 AC_SUBST(LIBHAL_LDFLAGS)
 AC_SUBST(DRIVER_BUILD_LIST)
